--- a/angular-blog/angular.json
+++ b/angular-blog/angular.json
@@ -66,7 +66,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-blog:build"
+            "browserTarget": "angular-blog:build",
+            "proxyConfig": "proxy.config.json"
           },
           "configurations": {
             "production": {
